compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/getterCycle.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
object A {
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val x = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>y<!><!>
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val y: Any get() = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>x<!><!>
}
